hphp/hack/test/typecheck/shape/shape_structural_subtyping_allows_idx_for_optional_field.php
<?hh // strict

type ShapeWithOptionalField = shape(?'a' => int);

function foo(ShapeWithOptionalField $shape): void {
  Shapes::idx($shape, 'a');
}
